lager-lang/examples/good/comparison.lg
int main() {
    print(1 <= 2); // true
    print(1 < 2);  // true
    print(1 == 2); // false
    print(1 > 2);  // false
    print(1 >= 2); // false
    print(1 != 2); // true
    
    print(3 <= 3); // true
    print(3 < 3);  // false
    print(3 == 3); // true
    print(3 > 3);  // false
    print(3 >= 3); // true
    print(3 != 3); // false
    
    return 0;
}
