lager-lang/examples/bad/compare-functions.lg
int f() {
    return 0;
}

int g() {
    return 1;
}

int main() {
    print(f < g); // compile error
    
    return 0;
}
